deploy/030-Deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elkato-frontend
  labels:
    app: elkato-frontend
    app.kubernetes.io/part-of: elkato-extras
  annotations:
    app.openshift.io/connects-to: |
      [
        {"apiVersion":"apps/v1","kind":"Deployment","name":"elkato-proxy"}
      ]
    image.openshift.io/triggers: |
      [
        {
          "from": {
            "kind":"ImageStreamTag",
            "name":"elkato-frontend:latest"
          },
          "fieldPath":"spec.template.spec.containers[?(@.name==\"frontend\")].image"
        }
      ]
spec:
  replicas: 1
  selector:
    matchLabels:
      app: elkato-frontend
  template:
    metadata:
      labels:
        app: elkato-frontend
    spec:
      containers:
        - name: frontend
          image: elkato-frontend
          ports:
            - containerPort: 8080
              name: frontend
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
          volumeMounts:
            - mountPath: /run
              name: run
      volumes:
        - name: run
          emptyDir: {}
