deploy/040-Service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: elkato-proxy
  labels:
    app: elkato-proxy
spec:
  selector:
    app: elkato-proxy
  ports:
    - name: api
      protocol: TCP
      port: 8080
      targetPort: api
---
kind: Service
apiVersion: v1
metadata:
  name: elkato-frontend
  labels:
    app: elkato-frontend
spec:
  selector:
    app: elkato-frontend
  ports:
    - name: frontend
      protocol: TCP
      port: 8080
      targetPort: frontend
