deploy/050-Route.yaml
---
kind: Route
apiVersion: v1
metadata:
  name: elkato
spec:
  to:
    kind: Service
    name: elkato-proxy
  port:
    targetPort: api
  tls:
    termination: edge
---
kind: Route
apiVersion: v1
metadata:
  name: elkato-ui
spec:
  to:
    kind: Service
    name: elkato-frontend
  port:
    targetPort: frontend
  tls:
    termination: edge
